; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_btree.c_checkRef.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_btree.c_checkRef.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@.str = private unnamed_addr constant [23 x i8] c"invalid page number %d\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"2nd reference to page %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i64)* @checkRef to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkRef(%struct.TYPE_6__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp sgt i64 %6, %9
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i64, i64* %5, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11, %2
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @checkAppendMsg(%struct.TYPE_6__* %15, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i64 %16)
  store i32 1, i32* %3, align 4
  br label %31

18:                                               ; preds = %11
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = load i64, i64* %5, align 8
  %21 = call i64 @getPageReferenced(%struct.TYPE_6__* %19, i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @checkAppendMsg(%struct.TYPE_6__* %24, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i64 %25)
  store i32 1, i32* %3, align 4
  br label %31

27:                                               ; preds = %18
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %29 = load i64, i64* %5, align 8
  %30 = call i32 @setPageReferenced(%struct.TYPE_6__* %28, i64 %29)
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %27, %23, %14
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @checkAppendMsg(%struct.TYPE_6__*, i8*, i64) #1

declare dso_local i64 @getPageReferenced(%struct.TYPE_6__*, i64) #1

declare dso_local i32 @setPageReferenced(%struct.TYPE_6__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
